<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.com.iluminatic.datacheck.MainDataActivity$PlaceholderFragment" 
    android:background="#6BD600">

    <TextView
        android:id="@+id/txtConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtConsumo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:textColor="#FFFFFF"
        android:layout_toRightOf="@+id/txtConsumo"
        android:text="@string/etiqueta_percent" 
         android:textSize="30sp"/>

    <TextView
        android:id="@+id/txtUso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtConsumo"
        android:layout_alignBottom="@+id/txtConsumo"
        android:textColor="#FFFFFF"
        android:layout_alignLeft="@+id/txtPercent"
        android:text="@string/etiqueta_uso" />

</RelativeLayout>