<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.com.iluminatic.datacheck.ConfigActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/label_plan" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPlanMb"
        android:layout_below="@+id/editPlanMb"
        android:layout_marginTop="26dp"
        android:text="@string/label_uso" />

    <EditText
        android:id="@+id/editPlanMb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_below="@+id/textView1"
        android:ems="10" 
        android:inputType="number"/>

    <EditText
        android:id="@+id/editUsoMb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/editPlanMb"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editDiaInicio"
        android:layout_below="@+id/editUsoMb"
        android:layout_marginTop="17dp"
        android:text="@string/label_inicio" />

    <EditText
        android:id="@+id/editDiaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editUsoMb"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_below="@+id/textView3"
        android:ems="10" 
        android:inputType="number">
       
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButton1"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignLeft="@+id/editDiaInicio"
        android:text="@string/label_notificar50" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editDiaInicio"
        android:layout_marginTop="20dp"
        android:text="ToggleButton" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_below="@+id/toggleButton1"
        android:layout_marginTop="22dp"
        android:text="@string/label_boton" />

</RelativeLayout>